--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bulma": "^0.9.4",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
