--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.0.8",
     "animate.css": "^4.1.1",
     "bulma": "^0.9.4",
     "gatsby": "^5.11.0",
