--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fontsource/roboto": "^5.0.8",
     "animate.css": "^4.1.1",
     "bulma": "^0.9.4",
+    "framer-motion": "^11.0.15",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-react-svg": "^3.3.0",
